--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Belajar Github nih gan</h1>
     <p>Ini paragraf</p>
     <button>Klik coba</button>
+    <p>ini paragraf dua</p>
 </body>
 </html>
